[gd_scene load_steps=16 format=3 uid="uid://ca5novjh6oniy"]

[ext_resource type="Script" path="res://enemy.gd" id="1_wrsnj"]
[ext_resource type="Texture2D" uid="uid://bini5e007i63f" path="res://prototyping_assets/enemy/Idle 01.png" id="2_diidm"]
[ext_resource type="Texture2D" uid="uid://dnr4wkodo4mc7" path="res://prototyping_assets/enemy/Idle 02.png" id="3_y82eu"]
[ext_resource type="Texture2D" uid="uid://d86fvdp6tfu7" path="res://prototyping_assets/enemy/Idle 03.png" id="4_ue6iq"]
[ext_resource type="Texture2D" uid="uid://cmcersikdllqo" path="res://prototyping_assets/enemy/Idle 04.png" id="5_m7g4i"]
[ext_resource type="PackedScene" uid="uid://bjw2kqsb2myoc" path="res://bullet.tscn" id="5_vxs5q"]
[ext_resource type="Texture2D" uid="uid://cltejknuwj6af" path="res://prototyping_assets/enemy/Idle 05.png" id="6_hyw6t"]
[ext_resource type="Texture2D" uid="uid://babpagcf2r4ga" path="res://prototyping_assets/enemy/Idle 06.png" id="7_web6u"]
[ext_resource type="Texture2D" uid="uid://daessk8sqxpuu" path="res://prototyping_assets/enemy/Idle 07.png" id="8_jd4s7"]
[ext_resource type="Texture2D" uid="uid://br6q0w4sc2ysv" path="res://prototyping_assets/enemy/Idle 08.png" id="9_5itx2"]
[ext_resource type="Texture2D" uid="uid://dsh0y4e5hlrjx" path="res://prototyping_assets/enemy/Idle 09.png" id="10_qs835"]
[ext_resource type="AudioStream" uid="uid://dyc80hddo2m3b" path="res://prototyping_assets/sound/impactGeneric_light_002.ogg" id="12_shmii"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fd7q8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_diidm")
}, {
"duration": 1.0,
"texture": ExtResource("3_y82eu")
}, {
"duration": 1.0,
"texture": ExtResource("4_ue6iq")
}, {
"duration": 1.0,
"texture": ExtResource("5_m7g4i")
}, {
"duration": 1.0,
"texture": ExtResource("6_hyw6t")
}, {
"duration": 1.0,
"texture": ExtResource("7_web6u")
}, {
"duration": 1.0,
"texture": ExtResource("8_jd4s7")
}, {
"duration": 1.0,
"texture": ExtResource("9_5itx2")
}, {
"duration": 1.0,
"texture": ExtResource("10_qs835")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wv6ix"]
size = Vector2(24, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovajd"]
size = Vector2(49.9999, 5.5)

[node name="enemy" type="CharacterBody2D"]
position = Vector2(516, 157)
script = ExtResource("1_wrsnj")

[node name="enemyAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fd7q8")
animation = &"idle"
frame_progress = 0.466107

[node name="enemyCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wv6ix")

[node name="playerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetector"]
position = Vector2(0, -7)
scale = Vector2(0.400001, 1)
shape = SubResource("RectangleShape2D_ovajd")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="bullet" parent="." instance=ExtResource("5_vxs5q")]
position = Vector2(-710, 20)

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_shmii")

[connection signal="body_entered" from="playerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
